Fix align features plan component.

--- a/source/stylesheets/components/_plan.sass
+++ b/source/stylesheets/components/_plan.sass
@@ -24,8 +24,11 @@
     padding: 0
 
   &__feature
+    align-items: flex-start
     background-color: get-color((color: raiz, opacity: .1))
     color: get-color((color: dark, opacity: .6))
+    display: flex
+    flex-direction: row
     font-size: 14px
     font-weight: 600
     padding: 15px
